--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
 		"@vitest/coverage-v8": "^3.1.3",
 		"vite": "^6.0.3",
 		"vitest": "^2.1.8"
